# krkrz

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  PreprocessorDefinitions.md  README.md  sources.cmake  vcpkg.json
common/base/: CharacterSet.cpp  FuncStubs.cpp  ScriptMgnIntf.cpp  StorageCache.cpp  StorageCache.h  StorageIntf.cpp  StorageIntf.h  SystemIntf.cpp  UtilStreams.h  makestub.pl
common/msg/: MsgIntf.cpp  MsgIntf.h
common/msg/text/: gentext_generic.bat
common/sound/: AudioStream.cpp  AudioStream.h  MathAlgorithms.h  MathAlgorithms_NEON.cpp  MathAlgorithms_SSE.cpp  PhaseVocoderDSP.cpp  PhaseVocoderDSP.h  QueueSoundBufferImpl.cpp  QueueSoundBufferImpl.h  RealFFT.h  RealFFT_NEON.cpp  RealFFT_SSE.cpp  SoundBufferBaseImpl.cpp  WaveIntf.cpp  xmmlib.cpp  xmmlib.h
common/tjs2/: tjs.h  tjsArray.cpp  tjsCommHead.h  tjsConfig.cpp  tjsDate.cpp  tjsDebug.cpp  tjsDebug.h  tjsDebuggerCore.cpp  tjsDebuggerCore.h  tjsDebuggerHook.cpp  tjsDebuggerHook.h  tjsDebuggerSymbols.cpp  tjsError.h  tjsInterCodeExec.cpp  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsMessage.cpp  tjsMessage.h  tjsObject.cpp  tjsObject.h  tjsString.h  tjsTypes.h  tjsUtils.h  tjsVariant.cpp  tjsVariant.h
common/utils/: DAPServer.cpp  DAPServer.h  DebugIntf.cpp  DebugIntf.h  Debugger.h  LogCore.cpp  LogIntf.h  REPL.cpp  REPL.h  ThreadIntf.cpp  WinConsole.cpp  WinConsole.h
common/visual/: BitmapInfomation.h  DrawDevice.h  FreeType.cpp  GraphicsLoaderIntf.cpp  GraphicsLoaderIntf.h  LayerBitmapImpl.cpp  LayerIntf.cpp  MoviePlayer.h  WindowIntf.cpp  argb.h  cpu_detect.cpp  cpu_detect.h
common/visual/IA32/: detect_cpu.cpp  tvpgl_ia32_intf.c  tvpgl_ia32_intf.h
common/visual/gl/: ResampleImage.cpp  adjust_color_neon.cpp  adjust_color_sse2.cpp  aligned_allocator.h  blend_function_avx2.cpp  blend_function_neon.cpp  blend_function_sse2.cpp  blend_functor_avx2.h  blend_functor_neon.h  blend_functor_sse2.h  blend_ps_functor_avx2.h  blend_ps_functor_neon.h  boxblur_sse2.cpp  colorfill_avx2.cpp  colorfill_neon.cpp  colorfill_sse2.cpp  colormap_avx2.cpp  colormap_neon.cpp  colormap_sse2.cpp  interpolation_functor_sse2.h  pixelformat_neon.cpp  pixelformat_sse2.cpp  simd_def_x86x64.h  univtrans_sse2.cpp  x86simdutil.h
common/visual/opengl/: EglContext.cpp  EglContext.h  OGLDrawDevice.cpp  OGLDrawDevice.h  OpenGLError.cpp
doc/: Logging.md  REPL.md
generic/: krkrz.h
generic/app/: andres.cpp  movie.cpp
generic/base/: DrawDeviceImpl.cpp  FileImpl.cpp  LocalFileSystem.h  PluginImpl.cpp  StorageImpl.cpp  SysInitImpl.cpp  SystemImpl.cpp
generic/environ/: Application.cpp  Application.h  OGLApplication.cpp
generic/msg/: MsgImpl.cpp
generic/utils/: LogImpl.cpp
generic/visual/: VideoOvlImpl.cpp  VideoOvlImpl.h  WindowImpl.cpp
generic/win32/: FileImpl.cpp
sdl3/base/: FileImpl.cpp  storage.cpp
sdl3/environ/: app.cpp  app.h  form.cpp  main.cpp  stdapp.cpp
sdl3/sound/: AudioStream.cpp  audio.cpp
sdl3/utils/: LogImpl.cpp  ThreadImpl.cpp
tests/: CMakeLists.txt  HANDOFF_COLORFILL_NEON.md  HANDOFF_COLORMAP_NEON.md  HANDOFF_LINUX_X64_VERIFY.md  HANDOFF_NEON_LINUX.md  HANDOFF_RESAMPLE_NEON.md  dap_smoke.py  simd_parity_test.cpp  sound_parity_test.cpp
tp_stub/: krkrz.cmake  tp_stub.cpp
win32/: XAudio2AudioStream.cpp
win32/base/: PluginImpl.cpp  PluginImpl.h  ScriptMgnImpl.cpp  StorageImpl.cpp  StorageImpl.h  SysInitImpl.cpp  SystemImpl.h
win32/environ/: Application.cpp  DetectCPU.cpp  DetectCPU.h
win32/movie/: CMakeLists.txt  webplayer.cpp  webplayer.h
win32/msg/: MsgImpl.cpp
win32/sound/: WaveImpl.h
win32/utils/: ClipboardImpl.cpp  ThreadImpl.cpp
win32/vcproj/: option_desc_cn.json  option_desc_en.json  option_desc_ja.json  option_desc_tw.json
win32/visual/: BasicDrawDevice.cpp  DrawDeviceImpl.cpp  VideoOvlImpl.cpp  WindowImpl.cpp  WindowImpl.h
